; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_stream_decoder.c_file_length_callback_.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_stream_decoder.c_file_length_callback_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }
%struct.flac_stat_s = type { i64 }

@stdin = common dso_local global i64 0, align 8
@FLAC__STREAM_DECODER_LENGTH_STATUS_UNSUPPORTED = common dso_local global i32 0, align 4
@FLAC__STREAM_DECODER_LENGTH_STATUS_ERROR = common dso_local global i32 0, align 4
@FLAC__STREAM_DECODER_LENGTH_STATUS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @file_length_callback_(%struct.TYPE_5__* %0, i64* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.flac_stat_s, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i64* %1, i64** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @stdin, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i32, i32* @FLAC__STREAM_DECODER_LENGTH_STATUS_UNSUPPORTED, align 4
  store i32 %18, i32* %4, align 4
  br label %35

19:                                               ; preds = %3
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @fileno(i64 %24)
  %26 = call i64 @flac_fstat(i32 %25, %struct.flac_stat_s* %8)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %19
  %29 = load i32, i32* @FLAC__STREAM_DECODER_LENGTH_STATUS_ERROR, align 4
  store i32 %29, i32* %4, align 4
  br label %35

30:                                               ; preds = %19
  %31 = getelementptr inbounds %struct.flac_stat_s, %struct.flac_stat_s* %8, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64*, i64** %6, align 8
  store i64 %32, i64* %33, align 8
  %34 = load i32, i32* @FLAC__STREAM_DECODER_LENGTH_STATUS_OK, align 4
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %30, %28, %17
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i64 @flac_fstat(i32, %struct.flac_stat_s*) #1

declare dso_local i32 @fileno(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
